test/resources/Semantics/SubclassAssign.stderr
Error on line 19: cannot assign A to a B
Error on line 25: expected type B in parameter 1 of the call to testB. Got type A instead.